--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header nav a {
 #hero {
   position: relative;
   height: 100vh;
-  background-image: url('portfolio/assets/images/bg.png');
+  background-image: url('assets/images/bg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
