--- a/style.css
+++ b/style.css
@@ -30,19 +30,8 @@ header nav a {
 
 /* Hero Section */
 #hero {
-  position: relative;
+  background-color: red; /* Test */
   height: 100vh;
-  background-image: url('assets/images/bg.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  text-align: center;
-  padding: 0 2rem;
 }
 
 /* Overlay für bessere Lesbarkeit */
