--- a/style.css
+++ b/style.css
@@ -30,19 +30,30 @@ header nav a {
 
 /* Hero Section */
 #hero {
-  background-color: red; /* Test */
+  position: relative;
   height: 100vh;
+  background-image: url('assets/images/bg.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+  padding: 0 2rem;
 }
 
 /* Overlay für bessere Lesbarkeit */
-#hero::before {
+/* #hero::before {
   content: "";
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
   background-color: rgba(0,0,0,0.5);
   z-index: 1;
-}
+} */
 
 /* Text über Overlay */
 #hero > * {
