--- a/style.css
+++ b/style.css
@@ -46,14 +46,14 @@ header nav a {
 }
 
 /* Overlay für bessere Lesbarkeit */
-/* #hero::before {
+#hero::before {
   content: "";
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
   background-color: rgba(0,0,0,0.5);
   z-index: 1;
-} */
+}
 
 /* Text über Overlay */
 #hero > * {
