--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header nav a {
   justify-content: center;
   align-items: center;
   color: white;
-  text-align: center;
+  text-align: left;
   padding: 0 2rem;
 }
 
