--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a {
 
 /* Überschriften */
 h1, h2, h3 {
-  font-family: 'Space Grotesk', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 700;
 }
 
@@ -68,7 +68,7 @@ header nav a {
 }
 
 #hero h1 {
-  font-size: 10rem;   /* ca. 48px */
+  font-size: 4.8rem;   /* ca. 48px */
 }
 
 #hero h2 {
