--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ header nav a {
 
 /* Button */
 .btn {
-  background-color: #61CE70;
+  background-color: #1E1E1E;
   color: white;
   padding: 0.8rem 1.5rem;
   border-radius: 8px;
