--- a/style.css
+++ b/style.css
@@ -141,12 +141,12 @@ footer {
 
 /* Kategorie-Überschrift */
 .category {
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
 }
 
 .category h2 {
   font-size: 2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
   border-bottom: 2px solid #ddd;
   padding-bottom: 0.5rem;
 }
@@ -175,14 +175,14 @@ footer {
 /* Bilder in Cards */
 .project-card img {
   width: 100%;
-  height: 180px;
+  height: auto;
   object-fit: cover; /* gleiche Größe */
 }
 
 /* Titel in Cards */
 .project-card h3 {
-  padding: 1rem;
-  font-size: 1.2rem;
+  padding: 0.5rem;
+  font-size: 0.8rem;
 }
 
 /* Responsives Verhalten */
